chore: input values on sets
- fix: end of match
- feat: control when match finish
- feat: ball possession control

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Marcador",
-  "name": "Marcador Padel y tenis",
+  "name": "Marcador Padel",
   "icons": [
     {
       "src": "favicon.ico",
