--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,7 +1,8 @@
 name: GitHub Actions Deploy app to github pages
-on: [push]
-  branches:
-    - main
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   Explore-GitHub-Actions:
