--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,11 +1,9 @@
 name: GitHub Actions Deploy app to github pages
-on:
-  push:
-    branches:
-      - main
+on: [push]
+
 
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+      - run: ls -R /
