github action change file

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,5 +1,8 @@
 name: GitHub Actions Deploy app to github pages
-on: [push]
+on:
+  push:
+    branches:
+      - main
 
 permissions:
   contents: write
