--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,12 +1,9 @@
 name: GitHub Actions Deploy app to github pages
-on:
-  push:
-    branches:
-      - main
+on: [push]
 
 permissions:
-  contents: write
-
+ pages: write
+ id-token: write
 jobs:
   build-and-deploy:
     concurrency: ci-${{ github.ref }} # Recommended if you intend to make multiple deployments in quick succession.
@@ -21,6 +18,4 @@ jobs:
           yarn build
 
       - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          folder: build
+        uses: actions/deploy-pages@v2
