changes in github action

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,7 +23,7 @@ jobs:
           path: /build
 
   deploy:
-    needed: build
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Deploy 🚀
