--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -27,6 +27,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Deploy 🚀
-        uses: actions/deploy-pages@v2
-        with:
-          token: ${{github.token}}
+        uses: actions/upload-pages-artifact@v2
