changes in github action

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -30,7 +30,8 @@ jobs:
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v3
-        with: github-pages
+        with:
+          name: github-pages
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
