--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -29,6 +29,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: github-pages
+          extract: ./git-pages
       - name: ls
         run: ls -R ./
 
